# obs-screenshot-plugin

./: CMakeLists.txt  screenshot-filter.c
.github/workflows/: build.yml
